fix form overlapping on large screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,7 @@ footer > h3, p {
         max-width: 600px;
         position: absolute;
         left: 10%;
-        top: 150px;
+        top: 70px;
     }
 
     .text-input:hover {
